Added chapter on assumptions.

--- a/causality.bib
+++ b/causality.bib
@@ -121,6 +121,24 @@
   file = {/home/lorenzo/Zotero/storage/V7P2IA32/bickel_ritov_tsybakov-2009-simultaneous_analysis_of_lasso_and_dantzig_selector.pdf}
 }
 
+@article{BlakelyLynchSimons:2020,
+  title = {Reflection on Modern Methods: When Worlds Collide\textemdash Prediction, Machine Learning and Causal Inference},
+  shorttitle = {Reflection on Modern Methods},
+  author = {Blakely, Tony and Lynch, John and Simons, Koen and Bentley, Rebecca and Rose, Sherri},
+  year = {2020},
+  month = dec,
+  journal = {International Journal of Epidemiology},
+  volume = {49},
+  number = {6},
+  pages = {2058--2064},
+  issn = {0300-5771},
+  doi = {10.1093/ije/dyz132},
+  urldate = {2023-07-24},
+  abstract = {Causal inference requires theory and prior knowledge to structure analyses, and is not usually thought of as an arena for the application of prediction modelling. However, contemporary causal inference methods, premised on counterfactual or potential outcomes approaches, often include processing steps before the final estimation step. The purposes of this paper are: (i) to overview the recent emergence of prediction underpinning steps in contemporary causal inference methods as a useful perspective on contemporary causal inference methods, and (ii) explore the role of machine learning (as one approach to `best prediction') in causal inference. Causal inference methods covered include propensity scores, inverse probability of treatment weights (IPTWs), G computation and targeted maximum likelihood estimation (TMLE). Machine learning has been used more for propensity scores and TMLE, and there is potential for increased use in G computation and estimation of IPTWs.},
+  keywords = {To Read},
+  file = {/home/lorenzo/Zotero/storage/8P4QG3E2/blakely_et_al-2020-reflection_on_modern_methods.pdf}
+}
+
 @article{breiman1996a,
   title = {Stacked Regressions},
   author = {Breiman, L.},
@@ -305,10 +323,10 @@
   publisher = {{Taylor \& Francis}},
   issn = {0162-1459},
   doi = {10.1080/01621459.2021.1955691},
-  urldate = {2023-06-21},
+  urldate = {2023-07-31},
   abstract = {Most causal inference methods consider counterfactual variables under interventions that set the exposure to a fixed value. With continuous or multi-valued treatments or exposures, such counterfactuals may be of little practical interest because no feasible intervention can be implemented that would bring them about. Longitudinal modified treatment policies (LMTPs) are a recently developed nonparametric alternative that yield effects of immediate practical relevance with an interpretation in terms of meaningful interventions such as reducing or increasing the exposure by a given amount. LMTPs also have the advantage that they can be designed to satisfy the positivity assumption required for causal inference. We present a novel sequential regression formula that identifies the LMTP causal effect, study properties of the LMTP statistical estimand such as the efficient influence function and the efficiency bound, and propose four different estimators. Two of our estimators are efficient, and one is sequentially doubly robust in the sense that it is consistent if, for each time point, either an outcome regression or a treatment mechanism is consistently estimated. We perform numerical studies of the estimators, and present the results of our motivating study on hypoxemia and mortality in intubated Intensive Care Unit (ICU) patients. Software implementing our methods is provided in the form of the open source R package lmtp freely available on GitHub (https://github.com/nt-williams/lmtp) and CRAN.},
   keywords = {Continuous exposures,Longitudinal data,Modified treatment policies,Sequential double robustness,Targeted minimum loss-based estimation,To Read},
-  file = {/home/lorenzo/Zotero/storage/3EZLD9QC/díaz_et_al-2023-nonparametric_causal_effects_based_on_longitudinal_modified_treatment_policies.pdf}
+  file = {/home/lorenzo/Zotero/storage/3EZLD9QC/díaz_et_al-2023-nonparametric_causal_effects_based_on_longitudinal_modified_treatment_policies.pdf;/home/lorenzo/Zotero/storage/LVVS9UAW/díaz_et_al-2023-nonparametric_causal_effects_based_on_longitudinal_modified_treatment_policies.pdf}
 }
 
 @article{farrell2015a,
@@ -372,6 +390,26 @@
   langid = {english},
   keywords = {To Read},
   file = {/home/lorenzo/Zotero/storage/6BVGR96X/gill_robins-2001-causal_inference_for_complex_longitudinal_data.pdf}
+}
+
+@article{GilsanzYoungGlymour:2022,
+  title = {Marginal {{Structural Models}} for {{Life-Course Theories}} and {{Social Epidemiology}}: {{Definitions}}, {{Sources}} of {{Bias}}, and {{Simulated Illustrations}}},
+  shorttitle = {Marginal {{Structural Models}} for {{Life-Course Theories}} and {{Social Epidemiology}}},
+  author = {Gilsanz, Paola and Young, Jessica G. and Glymour, M. Maria and Tchetgen Tchetgen, Eric J. and Eng, Chloe W. and Koenen, Karestan C. and Kubzansky, Laura D.},
+  year = {2022},
+  month = jan,
+  journal = {American Journal of Epidemiology},
+  volume = {191},
+  number = {2},
+  pages = {349--359},
+  issn = {1476-6256},
+  doi = {10.1093/aje/kwab253},
+  abstract = {Social epidemiology aims to identify social structural risk factors, thus informing targets and timing of interventions. Ascertaining which interventions will be most effective and when they should be implemented is challenging because social conditions vary across the life course and are subject to time-varying confounding. Marginal structural models (MSMs) may be useful but can present unique challenges when studying social epidemiologic exposures over the life course. We describe selected MSMs corresponding to common theoretical life-course models and identify key issues for consideration related to time-varying confounding and late study enrollment. Using simulated data mimicking a cohort study evaluating the effects of depression in early, mid-, and late life on late-life stroke risk, we examined whether and when specific study characteristics and analytical strategies may induce bias. In the context of time-varying confounding, inverse-probability-weighted estimation of correctly specified MSMs accurately estimated the target causal effects, while conventional regression models showed significant bias. When no measure of early-life depression was available, neither MSMs nor conventional models were unbiased, due to confounding by early-life depression. To inform interventions, researchers need to identify timing of effects and consider whether missing data regarding exposures earlier in life may lead to biased estimates.},
+  langid = {english},
+  pmcid = {PMC8897994},
+  pmid = {34668974},
+  keywords = {bias,Bias,Causality,Computer Simulation,confounding,{Data Interpretation, Statistical},Depression,Humans,inverse probability weighting,life course,marginal structural models,{Models, Structural},{Models, Theoretical},Risk Factors,simulation,social epidemiology,Stroke,To Read},
+  file = {/home/lorenzo/Zotero/storage/KFHH9W8C/gilsanz_et_al-2022-marginal_structural_models_for_life-course_theories_and_social_epidemiology.pdf}
 }
 
 @article{gruber2010a,
@@ -562,6 +600,39 @@
   pages = {4--29},
   langid = {english},
   keywords = {To Read}
+}
+
+@article{JawadekarKeziosOdden:2023,
+  title = {Practical {{Guide}} to {{Honest Causal Forests}} for {{Identifying Heterogeneous Treatment Effects}}},
+  author = {Jawadekar, Neal and Kezios, Katrina and Odden, Michelle C and Stingone, Jeanette A and Calonico, Sebastian and Rudolph, Kara and Zeki Al Hazzouri, Adina},
+  year = {2023},
+  month = jul,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {7},
+  pages = {1155--1165},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwad043},
+  urldate = {2023-07-24},
+  abstract = {``Heterogeneous treatment effects'' is a term which refers to conditional average treatment effects (i.e., CATEs) that vary across population subgroups. Epidemiologists are often interested in estimating such effects because they can help detect populations that may particularly benefit from or be harmed by a treatment. However, standard regression approaches for estimating heterogeneous effects are limited by preexisting hypotheses, test a single effect modifier at a time, and are subject to the multiple-comparisons problem. In this article, we aim to offer a practical guide to honest causal forests, an ensemble tree-based learning method which can discover as well as estimate heterogeneous treatment effects using a data-driven approach. We discuss the fundamentals of tree-based methods, describe how honest causal forests can identify and estimate heterogeneous effects, and demonstrate an implementation of this method using simulated data. Our implementation highlights the steps required to simulate data sets, build honest causal forests, and assess model performance across a variety of simulation scenarios. Overall, this paper is intended for epidemiologists and other population health researchers who lack an extensive background in machine learning yet are interested in utilizing an emerging method for identifying and estimating heterogeneous treatment effects.},
+  keywords = {To Read}
+}
+
+@article{KahanCroLi:2023,
+  title = {Eliminating {{Ambiguous Treatment Effects Using Estimands}}},
+  author = {Kahan, Brennan C and Cro, Suzie and Li, Fan and Harhay, Michael O},
+  year = {2023},
+  month = jun,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {6},
+  pages = {987--994},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwad036},
+  urldate = {2023-07-24},
+  abstract = {Most reported treatment effects in medical research studies are ambiguously defined, which can lead to misinterpretation of study results. This is because most authors do not attempt to describe what the treatment effect represents, and instead require readers to deduce this based on the reported statistical methods. However, this approach is challenging, because many methods provide counterintuitive results. For example, some methods include data from all patients, yet the resulting treatment effect applies only to a subset of patients, whereas other methods will exclude certain patients while results will apply to everyone. Additionally, some analyses provide estimates pertaining to hypothetical settings in which patients never die or discontinue treatment. Herein we introduce estimands as a solution to the aforementioned problem. An estimand is a clear description of what the treatment effect represents, thus saving readers the necessity of trying to infer this from study methods and potentially getting it wrong. We provide examples of how estimands can remove ambiguity from reported treatment effects and describe their current use in practice. The crux of our argument is that readers should not have to infer what investigators are estimating; they should be told explicitly.},
+  keywords = {To Read},
+  file = {/home/lorenzo/Zotero/storage/NXZLU8VE/kahan_et_al-2023-eliminating_ambiguous_treatment_effects_using_estimands.pdf}
 }
 
 @article{kang2007a,
@@ -859,6 +930,23 @@
   file = {/home/lorenzo/Zotero/storage/EQUU9H65/Ivan Diaz Munoz and Mark van der Laan.pdf;/home/lorenzo/Zotero/storage/MWZTS7TX/Muñoz_van der Laan_2012_Population Intervention Causal Effects Based on Stochastic Interventions.pdf}
 }
 
+@article{NaimiWhitcomb:2023,
+  title = {Defining and {{Identifying Average Treatment Effects}}},
+  author = {Naimi, Ashley I and Whitcomb, Brian W},
+  year = {2023},
+  month = may,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {5},
+  pages = {685--687},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwad012},
+  urldate = {2023-07-24},
+  abstract = {Methods for causal inference have experienced tremendous recent growth; this paper introduces key concepts underlying causal effect methods in epidemiologic research. ``Causal effects'' can be described using counterfactuals, which consider alternate versions of reality, and have a long history of use for interpreting cause-effect relationships in terms of what would have happened had things (e.g., exposures) been one way vs. another. Despite their intuitive appeal for thinking about causality, use of counterfactuals in formal causal inference requires attention to potential limitations. For example, consider a study of the effect of smoking on the 5-year cumulative risk of cardiovascular disease (CVD). Because of ambiguity in the ``effect of smoking,'' the corresponding counterfactual contrast is unclear and could correspond to a comparison between risk that would have happened if all study participants had ever smoked vs. never smoked, smoked 3 vs. 2 cigarettes per day, continued to smoke vs. quitting, and so on (1). There is an important degree of ambiguity in the language we use informally to ask causal questions. Causal inference is largely devoted to clarifying this ambiguity through use of potential outcomes as a formal framework, and a set of assumptions to allow interpretation of associations causally.},
+  keywords = {To Read},
+  file = {/home/lorenzo/Zotero/storage/2XX43CEW/naimi_whitcomb-2023-defining_and_identifying_average_treatment_effects.pdf}
+}
+
 @article{neugebauer2007a,
   title = {Nonparametric Causal Effects Based on Marginal Structural Models},
   author = {Neugebauer, R. and Laan, M.J.},
@@ -930,6 +1018,23 @@
   doi = {10.1093/biomet/85.3.619.},
   langid = {english},
   keywords = {To Read}
+}
+
+@article{RichardsonKeilCole:2022,
+  title = {Amplification of {{Bias Due}} to {{Exposure Measurement Error}}},
+  author = {Richardson, David B and Keil, Alexander P and Cole, Stephen R},
+  year = {2022},
+  month = jan,
+  journal = {American Journal of Epidemiology},
+  volume = {191},
+  number = {1},
+  pages = {182--187},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwab228},
+  urldate = {2023-07-24},
+  abstract = {Observational epidemiologic studies typically face challenges of exposure measurement error and confounding. Consider an observational study of the association between a continuous exposure and an outcome, where the exposure variable of primary interest suffers from classical measurement error (i.e., the measured exposures are distributed around the true exposure with independent error). In the absence of exposure measurement error, it is widely recognized that one should control for confounders of the association of interest to obtain an unbiased estimate of the effect of that exposure on the outcome of interest. However, here we show that, in the presence of classical exposure measurement error, the net bias in an estimate of the association of interest may increase upon adjustment for confounders. We offer an analytical expression for calculating the change in net bias in an estimate of the association of interest upon adjustment for a confounder in the presence of classical exposure measurement error, and we illustrate this problem using simulations.},
+  keywords = {To Read},
+  file = {/home/lorenzo/Zotero/storage/DBXAPRID/richardson_keil_cole-2022-amplification_of_bias_due_to_exposure_measurement_error.pdf}
 }
 
 @article{robins1994a,
@@ -1070,6 +1175,41 @@
   keywords = {To Read}
 }
 
+@article{RudolphBenkeserKennedy:2022,
+  title = {Estimation of the {{Average Causal Effect}} in {{Longitudinal Data With Time-Varying Exposures}}: {{The Challenge}} of {{Nonpositivity}} and the {{Impact}} of {{Model Flexibility}}},
+  shorttitle = {Estimation of the {{Average Causal Effect}} in {{Longitudinal Data With Time-Varying Exposures}}},
+  author = {Rudolph, Jacqueline E and Benkeser, David and Kennedy, Edward H and Schisterman, Enrique F and Naimi, Ashley I},
+  year = {2022},
+  month = oct,
+  journal = {American Journal of Epidemiology},
+  volume = {191},
+  number = {11},
+  pages = {1962--1969},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwac136},
+  urldate = {2023-07-24},
+  abstract = {There are important challenges to the estimation and identification of average causal effects in longitudinal data with time-varying exposures. Here, we discuss the difficulty in meeting the positivity condition. Our motivating example is the per-protocol analysis of the Effects of Aspirin in Gestation and Reproduction (EAGeR) Trial. We estimated the average causal effect comparing the incidence of pregnancy by 26 weeks that would have occurred if all women had been assigned to aspirin and complied versus the incidence if all women had been assigned to placebo and complied. Using flexible targeted minimum loss-based estimation, we estimated a risk difference of 1.27\% (95\% CI: -9.83, 12.38). Using a less flexible inverse probability weighting approach, the risk difference was 5.77\% (95\% CI: -1.13, 13.05). However, the cumulative probability of compliance conditional on covariates approached 0 as follow-up accrued, indicating a practical violation of the positivity assumption, which limited our ability to make causal interpretations. The effects of nonpositivity were more apparent when using a more flexible estimator, as indicated by the greater imprecision. When faced with nonpositivity, one can use a flexible approach and be transparent about the uncertainty, use a parametric approach and smooth over gaps in the data, or target a different estimand that will be less vulnerable to positivity violations.},
+  keywords = {To Read},
+  file = {/home/lorenzo/Zotero/storage/RJ4P627X/6650853.html}
+}
+
+@article{SavitzWellenius:2023,
+  title = {Can {{Cross-Sectional Studies Contribute}} to {{Causal Inference}}? {{It Depends}}},
+  shorttitle = {Can {{Cross-Sectional Studies Contribute}} to {{Causal Inference}}?},
+  author = {Savitz, David A and Wellenius, Gregory A},
+  year = {2023},
+  month = apr,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {4},
+  pages = {514--516},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwac037},
+  urldate = {2023-07-24},
+  abstract = {Cross-sectional studies\textemdash often defined as those in which exposure and outcome are assessed at the same point in time\textemdash are frequently viewed as minimally informative for causal inference. While cross-sectional studies may be susceptible to reverse causality, may be limited to assessment of disease prevalence rather than incidence, or may only provide estimates of current rather than past exposures, not all cross-sectional studies suffer these limitations. Moreover, none of these concerns are unique to or inherent in the structure of a cross-sectional study. Regardless of when exposure and disease were ascertained relative to one another, a cross-sectional study may provide insights into the causal effects of exposure on disease incidence. Simply labeling a study as ``cross-sectional'' and assuming that 1 or more of these limitations exist and are materially important fails to recognize the need for a more nuanced assessment and risks discarding evidence that may be useful in assessing causal relationships.},
+  keywords = {To Read}
+}
+
 @article{shah2020a,
   title = {The Hardness of Conditional Independence Testing and the Generalised Covariance Measure},
   author = {Shah, R.D. and Peters, J.},
@@ -1112,17 +1252,6 @@
   file = {/home/lorenzo/Zotero/storage/E4PIRV9R/taubman_et_al-2009-on_risk_factors_for_coronary_heart_disease.pdf}
 }
 
-@misc{tsiatis2006a,
-  title = {Semiparametric Theory and Missing Data},
-  author = {Tsiatis, A.A.},
-  year = {2006},
-  series = {Springer Series in Statistics},
-  publisher = {{Springer}},
-  address = {{New York}},
-  langid = {english},
-  keywords = {To Read}
-}
-
 @article{vaart2006a,
   title = {Estimating a Survival Distribution with Current Status Data and High-Dimensional Covariates},
   author = {Vaart, A.W. and Laan, M.J.},
@@ -1154,6 +1283,24 @@
   keywords = {To Read}
 }
 
+@article{VanderWeele:2009a,
+  title = {On the {{Distinction Between Interaction}} and {{Effect Modification}}},
+  author = {VanderWeele, Tyler J.},
+  year = {2009},
+  month = nov,
+  journal = {Epidemiology},
+  volume = {20},
+  number = {6},
+  pages = {863},
+  issn = {1044-3983},
+  doi = {10.1097/EDE.0b013e3181ba333c},
+  urldate = {2023-08-14},
+  abstract = {This paper contrasts the concepts of interaction and effect modification using a series of examples. Interaction and effect modification are formally defined within the counterfactual framework. Interaction is defined in terms of the effects of 2 interventions whereas effect modification is defined in terms of the effect of one intervention varying across strata of a second variable. Effect modification can be present with no interaction; interaction can be present with no effect modification. There are settings in which it is possible to assess effect modification but not interaction, or to assess interaction but not effect modification. The analytic procedures for obtaining estimates of effect modification parameters and interaction parameters using marginal structural models are compared and contrasted. A characterization is given of the settings in which interaction and effect modification coincide.},
+  langid = {american},
+  keywords = {Read},
+  file = {/home/lorenzo/Zotero/storage/N6RLUN42/VanderWeele - 2009 - On the Distinction Between Interaction and Effect .pdf}
+}
+
 @article{vansteelandt2017a,
   title = {Interventional Effects for Mediation Analysis with Multiple Mediators},
   author = {Vansteelandt, S. and Daniel, R.M.},
@@ -1175,6 +1322,25 @@
   keywords = {To Read}
 }
 
+@article{VansteelandtVanderWeeleTchetgen:2008,
+  title = {Multiply {{Robust Inference}} for {{Statistical Interactions}}},
+  author = {Vansteelandt, Stijn and VanderWeele, Tyler J. and Tchetgen, Eric J. and Robins, James M.},
+  year = {2008},
+  month = dec,
+  journal = {Journal of the American Statistical Association},
+  volume = {103},
+  number = {484},
+  pages = {1693--1704},
+  publisher = {{Taylor \& Francis}},
+  issn = {0162-1459},
+  doi = {10.1198/016214508000001084},
+  urldate = {2023-08-14},
+  abstract = {A primary focus of an increasing number of scientific studies is to determine whether two exposures interact in the effect that they produce on an outcome of interest. Interaction is commonly assessed by fitting regression models in which the linear predictor includes the product between those exposures. When the main interest lies in the interaction, this approach is not entirely satisfactory, because it is prone to (possibly severe) bias when the main exposure effects or the associations between outcome and extraneous factors are misspecified. In this article we consider conditional mean models with identity or log link that postulate the statistical interaction in terms of a finite-dimensional parameter but are otherwise unspecified. We show that estimation of the interaction parameter often is not feasible in this model, because it requires nonparametric estimation of auxiliary conditional expectations given high-dimensional variables. We thus consider multiply robust estimation under a union model that assumes that at least one of several working submodels holds. Our approach is novel in that it makes use of information on the joint distribution of the exposures conditional on the extraneous factors in making inferences about the interaction parameter of interest. In the special case of a randomized trial or a family-based genetic study in which the joint exposure distribution is known by design or by Mendelian inheritance, the resulting multiply robust procedure leads to asymptotically distribution-free tests of the null hypothesis of no interaction on an additive scale. We illustrate the methods through simulation and analysis of a randomized follow-up study.},
+  pmid = {21603124},
+  keywords = {Double robustness,Gene\textendash environment interaction,Gene\textendash gene interaction,Longitudinal data,Semiparametric inference,To Read},
+  file = {/home/lorenzo/Zotero/storage/QFNBW3PP/Vansteelandt et al. - 2008 - Multiply Robust Inference for Statistical Interact.pdf}
+}
+
 @article{wang2010a,
   title = {Nonparametric Regression with Missing Outcomes Using Weighted Kernel Estimating Equations},
   author = {Wang, L. and Rotnitzky, A. and Lin, X.},
@@ -1182,6 +1348,39 @@
   volume = {105},
   pages = {1135--1146},
   langid = {english},
+  keywords = {To Read}
+}
+
+@article{Webster-ClarkKeil:2023,
+  title = {How {{Choice}} of {{Effect Measure Influences Minimally Sufficient Adjustment Sets}} for {{External Validity}}},
+  author = {{Webster-Clark}, Michael and Keil, Alexander P},
+  year = {2023},
+  month = jul,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {7},
+  pages = {1148--1154},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwad041},
+  urldate = {2023-07-24},
+  abstract = {Epidemiologic researchers generalizing or transporting effect estimates from a study to a target population must account for effect-measure modifiers (EMMs) on the scale of interest. However, little attention is paid to how the EMMs required may vary depending on the mathematical nuances of each effect measure. We defined 2 types of EMMs: a marginal EMM, where the effect on the scale of interest differs across levels of a variable, and a conditional EMM, where the effect differs conditional on other variables associated with the outcome. These types define 3 classes of variables: class 1 (conditional EMM), class 2 (marginal but not conditional EMM), and class 3 (neither marginal nor conditional EMM). Class 1 variables are necessary to achieve a valid estimate of the RD in a target population, while an RR requires class 1 and class 2 and an OR requires classes 1, 2, and 3 (i.e., all variables associated with the outcome). This does not mean that fewer variables are required for an externally valid RD (because variables may not modify effects on all scales), but it does suggest that researchers should consider the scale of the effect measure when identifying an EMM necessary for an externally valid treatment effect estimate.},
+  keywords = {To Read}
+}
+
+@article{WeichenthalRipleyKorsiak:2023,
+  title = {Fine {{Particulate Air Pollution}} and the ``{{No-Multiple-Versions-of-Treatment}}'' {{Assumption}}: {{Does Particle Composition Matter}} for {{Causal Inference}}?},
+  shorttitle = {Fine {{Particulate Air Pollution}} and the ``{{No-Multiple-Versions-of-Treatment}}'' {{Assumption}}},
+  author = {Weichenthal, Scott and Ripley, Susannah and Korsiak, Jill},
+  year = {2023},
+  month = feb,
+  journal = {American Journal of Epidemiology},
+  volume = {192},
+  number = {2},
+  pages = {147--153},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwac191},
+  urldate = {2023-07-24},
+  abstract = {Here we discuss possible violations of the ``no-multiple-versions-of-treatment'' assumption in studies of outdoor fine particulate air pollution (particulate matter with an aerodynamic diameter less than or equal to 2.5 {$\mu$}m (PM2.5)) owing to differences in particle composition, which in turn influence health. This assumption is part of the potential outcomes framework for causal inference, and it is needed for well-defined potential outcomes, as multiple versions of the same treatment could lead to different health risks for the same level of treatment. Since 2 locations can have the same outdoor PM2.5 mass concentration (i.e., treatment) but different chemical compositions (i.e., versions of treatment), violations of the ``no-multiple-versions-of-treatment'' assumption seem likely. Importantly, violations of this assumption will not bias health risk estimates for PM2.5 mass concentrations if there are no unmeasured confounders of the ``version of treatment''\textendash outcome relationship. However, confounding can occur if these factors are not identified and controlled for in the analysis. We describe situations in which this may occur and provide simulations to estimate the magnitude and direction of this possible bias. In general, violations of the ``no-multiple-versions-of-treatment'' assumption could be an underappreciated source of bias in studies of outdoor PM2.5. Analysis of the health impacts of outdoor PM2.5 mass concentrations across spatial domains with similar composition could help to address this issue.},
   keywords = {To Read}
 }
 
@@ -1197,10 +1396,10 @@
   publisher = {{University of Pennsylvania Press}},
   issn = {2767-3324},
   doi = {10.1353/obs.2023.0019},
-  urldate = {2023-06-21},
+  urldate = {2023-07-31},
   abstract = {We present the lmtp R package for causal inference from longitudinal observational or randomized studies. This package implements the estimators of D\'iaz et al. (2021) for estimating general non-parametric causal effects based on modified treatment policies. Modified treatment policies generalize static and dynamic interventions, making lmtp and all-purpose package for non-parametric causal inference in observational studies. The methods provided can be applied to both point-treatment and longitudinal settings, and can account for time-varying exposure, covariates, and right censoring thereby providing a very general tool for causal inference. Additionally, two of the provided estimators are based on flexible machine learning regression algorithms, and avoid bias due to parametric model misspecification while maintaining valid statistical inference.},
   keywords = {Causal inference,longitudinal data,modified treatment policies,non-parametric,To Read},
-  file = {/home/lorenzo/Zotero/storage/86MMYLWI/williams_díaz-2023-lmtp.pdf}
+  file = {/home/lorenzo/Zotero/storage/RYXALP78/williams_díaz-2023-lmtp.pdf}
 }
 
 @article{williamson2021a,
@@ -1216,16 +1415,22 @@
   file = {/home/lorenzo/Zotero/storage/2D5G6YJW/williamson_et_al-2021-nonparametric_variable_importance_assessment_using_machine_learning_techniques.pdf}
 }
 
-@article{young2014a,
+@article{YoungHernanRobins:2014,
   title = {Identification, Estimation and Approximation of Risk under Interventions That Depend on the Natural Value of Treatment Using Observational Data},
-  author = {Young, J.G. and Hern{\'a}n, M.A. and Robins, J.M.},
+  author = {Young, Jessica G. and Her{\'n}an, Miguel A. and Robins, James M.},
   year = {2014},
+  month = dec,
   journal = {Epidemiologic Methods},
   volume = {3},
+  number = {1},
   pages = {1--19},
+  issn = {2194-9263},
+  doi = {10.1515/em-2012-0001},
   langid = {english},
+  pmcid = {PMC4387917},
+  pmid = {25866704},
   keywords = {To Read},
-  file = {/home/lorenzo/Zotero/storage/J2QFJTEA/young_hernán_robins-2014-identification,_estimation_and_approximation_of_risk_under_interventions_that.pdf}
+  file = {/home/lorenzo/Zotero/storage/WMW86I2V/young_herńan_robins-2014-identification,_estimation_and_approximation_of_risk_under_interventions_that.pdf}
 }
 
 @article{zhang2008a,
