--- a/causality.bib
+++ b/causality.bib
@@ -221,6 +221,21 @@
   keywords = {/unread,To Read}
 }
 
+@online{ChattonRohrer:2023,
+  title = {The {{Causal Cookbook}}: {{Recipes}} for {{Propensity Scores}}, {{G-Computation}}, and {{Doubly Robust Standardization}}},
+  shorttitle = {The {{Causal Cookbook}}},
+  author = {Chatton, Arthur and Rohrer, Julia M.},
+  date = {2023-09-14T18:31:13},
+  doi = {10.31234/osf.io/k2gzp},
+  url = {https://psyarxiv.com/k2gzp/},
+  urldate = {2023-09-18},
+  abstract = {Recent developments in the causal inference literature have renewed psychologists’ interest in how to improve causal conclusions based on observational data. A lot of the recent writing has focused on concerns of causal identification (under which conditions is it, in principle, possible to recover causal effects?); in this primer, we turn to causal estimation (how do we actually turn the data into an effect estimate?) and modern approaches to it that are commonly used in epidemiology. First, we explain how causal estimands can be defined rigorously with the help of the potential outcomes framework, and we highlight four crucial assumptions necessary for causal inference to succeed (exchangeability, positivity, consistency, and non-interference). Next, we present three types of approaches to causal estimation and compare their strengths and weaknesses: propensity score methods (in which the independent variable is modeled as a function of controls), g-computation methods (in which the dependent variable is modeled as a function of both controls and the independent variable), and doubly robust estimators (which combine models for both independent and dependent variables). A companion R Notebook can be found at github.com/ArthurChatton/CausalCookbook. We hope that this non-technical introduction not only helps psychologists and other social scientists expand their causal toolbox but also facilitates communication across disciplinary boundaries when it comes to causal inference, a research goal common to all fields of research.},
+  langid = {american},
+  pubstate = {preprint},
+  keywords = {/unread,Causal inference,Doubly robust estimator,g-formula,inverse probability weighting,potential outcomes,Quantitative Methods,Social and Behavioral Sciences,Statistical Methods,To Read},
+  file = {/home/lfabbri/Zotero/storage/SNL96ZVV/chatton_rohrer-2023-the_causal_cookbook.pdf}
+}
+
 @article{chen1999a,
   title = {Improved Rates and Asymptotic Normality for Nonparametric Neural Network Estimators},
   author = {Chen, X. and White, H.},
